# everybody_codes_2025

./: .gitignore
quest1/: part1.cpp  part2.cpp  part3.cpp
quest2/: part1.cpp  part2.cpp  part3.cpp
quest3/: part1.cpp  part2.cpp  part3.cpp
quest4/: common.cpp  part1.cpp  part2.cpp  part3.cpp
quest5/: CMakeLists.txt  part1.cpp  part2.cpp  part3.cpp  temp.txt
quest6/: common.cpp  part1.cpp  part2.cpp  part3.cpp
quest7/: CMakeLists.txt  common.cpp  part1.cpp  part2.cpp  part3.cpp
quest8/: common.cpp  part1.cpp  part2.cpp  part3.cpp
quest9/: part1.cpp  part2.cpp  part3.cpp
